<?xml version="1.0"?>
<package>
  <name>assignment_5</name>
  <version>0.0.0</version>
  <description>The assignment_5 package</description>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <license>Public domain</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
